add missing link on the community

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
     </div>
     <p>
-      <strong><a href="">It's also world-wide community of meet-ups</a></strong> where mentors and students work through the courses together and share what they've learnt.
+      <strong><a href="http://nodeschool.io">It's also world-wide community of meet-ups</a></strong> where mentors and students work through the courses together and share what they've learnt.
     </p>
     </section>
 
