--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </span>
         </h2>
         <div class="event-meta list-inline">
-            <p><strong><a href="http://nodeschool-osaka.doorkeeper.jp/events/17766">May 8th, 2015</a></strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
+            <p><strong><a href="">May 8th, 2015</a></strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
         </div>
       </section>
     </div>
