--- a/index.html
+++ b/index.html
@@ -1,87 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <link rel="icon" href="favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="thomaspeklak"/>
-  <link rel="stylesheet" href="dark-style.css"/>
-  <title>Nodeschool Vienna</title>
+    <meta charset="utf-8">
+    <link rel="icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="thomaspeklak"/>
+    <link rel="stylesheet" href="dark-style.css"/>
+    <title>Nodeschool Vienna</title>
 </head>
 <body>
-  <header>
-    <h1>
-      <div class="container">
-        <span class="what">NodeSchool</span>
-        <span class="where">Vienna</span>
-        </div>
-    </h1>
-    <h2>Helping you JavaScript since 2014</h2>
-  </header>
+    <header>
+        <h1>
+            <div class="container">
+                <span class="what">NodeSchool</span>
+                <span class="where">Vienna</span>
+            </div>
+        </h1>
+        <h2>Helping you JavaScript since 2014</h2>
+    </header>
 
-  <section id="intro">
-    <p>
-        <strong>NodeSchool is a collection of workshops</strong> that help you learn JavaScript by writing code and solving challenges. <a href="https://github.com/nodeschool/vienna" style="text-decoration: underline;">Join the Vienna community on GitHub</a><!--, or <a href="https://gitter.im/nodeschool/nodeschool-japan" style="text-decoration: underline;">Live Developer Chat on Gitter</a>-->.
-    </p>
-    <div class="terms">
-      <div class="term">
-        <div class="chrome">
-          <span class="btn btn-term close"></span>
-          <span class="btn btn-term min"></span>
-          <span class="btn btn-term max"></span>
+    <section id="intro">
+        <p>
+            <strong>NodeSchool is a collection of workshops</strong> that help you learn JavaScript by writing code and solving challenges. <a href="https://github.com/nodeschool/vienna" style="text-decoration: underline;">Join the Vienna community on GitHub</a><!--, or <a href="https://gitter.im/nodeschool/nodeschool-japan" style="text-decoration: underline;">Live Developer Chat on Gitter</a>-->.
+        </p>
+        <div class="terms">
+            <div class="term">
+                <div class="chrome">
+                    <span class="btn btn-term close"></span>
+                    <span class="btn btn-term min"></span>
+                    <span class="btn btn-term max"></span>
+                </div>
+                <div class="shell">
+                    <code>npm install -g learnyounode</code>
+                    <code>learnyounode</code>
+                </div>
+            </div>
+            <div class="term">
+                <div class="chrome">
+                    <span class="btn btn-term close"></span>
+                    <span class="btn btn-term min"></span>
+                    <span class="btn btn-term max"></span>
+                </div>
+                <div class="shell">
+                    <div class="workshopper">
+                        <code>» HELLO WORLD</code>
+                        <code>» BABY STEPS</code>
+                        <code>» MY FIRST I/O!</code>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="shell">
-          <code>npm install -g learnyounode</code>
-          <code>learnyounode</code>
-        </div>
-      </div>
-      <div class="term">
-        <div class="chrome">
-          <span class="btn btn-term close"></span>
-          <span class="btn btn-term min"></span>
-          <span class="btn btn-term max"></span>
-        </div>
-        <div class="shell">
-          <div class="workshopper">
-            <code>» HELLO WORLD</code>
-            <code>» BABY STEPS</code>
-            <code>» MY FIRST I/O!</code>
-          </div>
-        </div>
-      </div>
-    </div>
-    <p>
-      <strong><a href="http://nodeschool.io">It's also world-wide community of meet-ups</a></strong> where mentors and students work through the courses together and share what they've learnt.
-    </p>
+        <p>
+            <strong><a href="http://nodeschool.io">It's also world-wide community of meet-ups</a></strong> where mentors and students work through the courses together and share what they've learnt.
+        </p>
     </section>
 
     <div id="next">
-      <section>
-        <h2>
-        <span class="sign">
-          Next event
-        </span>
-        </h2>
-        <div class="event-meta list-inline">
-            <p><strong><a href="">May 8th, 2015</a></strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
-        </div>
-      </section>
+        <section>
+            <h2>
+                <span class="sign">
+                    Next event
+                </span>
+            </h2>
+            <div class="event-meta list-inline">
+                <p><strong><a href="">October 13th, 2015</a></strong> at Sector5</p>
+            </div>
+        </section>
+        <section>
+            <h2>
+                <span class="sign">
+                    Past events
+                </span>
+            </h2>
+            <div class="event-meta list-inline">
+                <p><strong><a href="">May 8th, 2015</a></strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
+            </div>
+        </section>
     </div>
 
-  <section id="more">
-    <p>
-      <strong><a href="https://github.com/nodeschool/discussions/blob/master/README.md">It's a group of volunteers</a></strong> around the world, answering questions, and explaining concepts.
-    </p>
-    <p>
-      <strong><a href="https://github.com/nodeschool/">It's all open-source</a></strong> so anyone can contribute. It's all powered by volunteers; anyone can write a course,
-      <a href="https://github.com/nodeschool/discussions/issues/93">host an event</a>, or <a href="https://github.com/nodeschool/discussions/issues/">answer a question</a>.
-    </p>
-    <p>
-      <i>It all sounds too good to be true</i>, but it's real and <strong><a href="https://camo.githubusercontent.com/067905dad43acdc021737bd34baf3549c216b080/68747470733a2f2f662e636c6f75642e6769746875622e636f6d2f6173736574732f35383837312f323335363230332f64373665656432362d613565382d313165332d393662362d3362653331306661333463372e6a7067">it's pretty awesome</a></strong>, so come get involved.
-    </p>
-  </section>
+    <section id="more">
+        <p>
+            <strong><a href="https://github.com/nodeschool/discussions/blob/master/README.md">It's a group of volunteers</a></strong> around the world, answering questions, and explaining concepts.
+        </p>
+        <p>
+            <strong><a href="https://github.com/nodeschool/">It's all open-source</a></strong> so anyone can contribute. It's all powered by volunteers; anyone can write a course,
+            <a href="https://github.com/nodeschool/discussions/issues/93">host an event</a>, or <a href="https://github.com/nodeschool/discussions/issues/">answer a question</a>.
+        </p>
+        <p>
+            <i>It all sounds too good to be true</i>, but it's real and <strong><a href="https://camo.githubusercontent.com/067905dad43acdc021737bd34baf3549c216b080/68747470733a2f2f662e636c6f75642e6769746875622e636f6d2f6173736574732f35383837312f323335363230332f64373665656432362d613565382d313165332d393662362d3362653331306661333463372e6a7067">it's pretty awesome</a></strong>, so come get involved.
+        </p>
+    </section>
 
-  <footer>
-  </footer>
+    <footer>
+    </footer>
 </body>
 </html>
