refine next event on october 15th

--- a/index.html
+++ b/index.html
@@ -55,25 +55,18 @@
         </p>
     </section>
 
-    <div id="next">
+    <div id="next" class="events">
         <section>
             <h2>
                 <span class="sign">
                     Next event
                 </span>
             </h2>
-            <div class="event-meta list-inline">
-                <p><strong><a href="">October 13th, 2015</a></strong> at Sector5</p>
-            </div>
-        </section>
-        <section>
-            <h2>
-                <span class="sign">
-                    Past events
-                </span>
-            </h2>
-            <div class="event-meta list-inline">
-                <p><strong><a href="">May 8th, 2015</a></strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
+            <div class="event-meta list-inline next-event">
+                <h3 class="next-title">October 13th, 2015 17:30-21:00</h3>
+                <p class="next-location"> at <a href="http://www.sektor5.at/">Sector5</a><br/><small>Siebenbrunnengasse 44, 1050 Wien</small></p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d10640.260644189946!2d16.350594!3d48.186096!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x476da82eddcf5077%3A0xc24c0bdebc2b280c!2sSiebenbrunnengasse+44%2C+1050+Wien%2C+Austria!3m2!1d48.186096!2d16.3552075!5e0!3m2!1sen!2sat!4v1444080439214" height="320" frameborder="0" style="width:100%;border:0" allowfullscreen></iframe>
+                <p class="next-register"><a href="http://www.meetup.com/nodejs-vienna/events/225007342/">Register now</a></p>
             </div>
         </section>
     </div>
@@ -90,6 +83,20 @@
             <i>It all sounds too good to be true</i>, but it's real and <strong><a href="https://camo.githubusercontent.com/067905dad43acdc021737bd34baf3549c216b080/68747470733a2f2f662e636c6f75642e6769746875622e636f6d2f6173736574732f35383837312f323335363230332f64373665656432362d613565382d313165332d393662362d3362653331306661333463372e6a7067">it's pretty awesome</a></strong>, so come get involved.
         </p>
     </section>
+
+    <div id="past" class="events">
+        <section>
+            <h2>
+                <span class="sign">
+                    Past events
+                </span>
+            </h2>
+            <div class="event-meta list-inline">
+                <p><strong>May 8th, 2015</strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
+            </div>
+        </section>
+    </div>
+
 
     <footer>
     </footer>
