--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="container">
                 <span class="what">NodeSchool</span>
                 <span class="where">Vienna</span>
+                <span class="logo"></span>
             </div>
         </h1>
         <h2>Helping you JavaScript since 2014</h2>
