Update index.html with new event

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 </span>
             </h2>
             <div class="event-meta list-inline next-event">
-                <h3 class="next-title">October 13th, 2015 17:30-21:00</h3>
-                <p class="next-location"> at <a href="http://www.sektor5.at/">Sector5</a><br/><small>Siebenbrunnengasse 44, 1050 Wien</small></p>
+                <h3 class="next-title">August 4th, 2016 19:00-22:00</h3>
+                <p class="next-location"> at <a href="http://www.sektor5.at/">sektor5</a><br/><small>Siebenbrunnengasse 44, 1050 Wien</small></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d10640.260644189946!2d16.350594!3d48.186096!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x476da82eddcf5077%3A0xc24c0bdebc2b280c!2sSiebenbrunnengasse+44%2C+1050+Wien%2C+Austria!3m2!1d48.186096!2d16.3552075!5e0!3m2!1sen!2sat!4v1444080439214" height="320" frameborder="0" style="width:100%;border:0" allowfullscreen></iframe>
                 <p class="next-register"><a href="http://www.meetup.com/nodejs-vienna/events/225007342/">Register now</a></p>
             </div>
@@ -93,6 +93,7 @@
                 </span>
             </h2>
             <div class="event-meta list-inline">
+                <p><strong>>October 13th, 2015</strong> at <a href="http://www.sektor5.at/">sektor5</a> coworking space.</p>
                 <p><strong>May 8th, 2015</strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
             </div>
         </section>
