Remove a period in recent events index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </span>
             </h2>
             <div class="event-meta list-inline">
-                <p><strong>October 13th, 2015</strong> at <a href="http://www.sektor5.at/">sektor5</a> coworking space.</p>
+                <p><strong>October 13th, 2015</strong> at <a href="http://www.sektor5.at/">sektor5</a> coworking space</p>
                 <p><strong>May 8th, 2015</strong> during the <a href="http://linuxwochen.at">Linuxwochen</a> at Technikum Wien</p>
             </div>
         </section>
